--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -113,12 +113,12 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="list-group list-group-flush costum-border">
-                            <li class="list-group-item"><a class="text-decoration-none text-dark" href=""><b> Account details</b></a>
+                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="/profile"><b> Account details</b></a>
                             </li>
-                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="address.html">Address</a></li>
+                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="/address">Address</a></li>
                             <li class="list-group-item"><a class="text-decoration-none text-dark" href="">Oders</a></li>
-                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="">Whishlist</a></li>
-                            <li class="list-group-item "><a class="text-decoration-none text-danger" href="">Logout</a></li>
+                            <li class="list-group-item"><a class="text-decoration-none text-dark" href="/wishlist">Wishlist</a></li>
+                            <li class="list-group-item "><a class="text-decoration-none text-danger" href="/logout">Logout</a></li>
                         </ul>
                     </div>
                 </div>
