--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"
   rel="stylesheet">
+
 </head>
 <body>
   
@@ -30,7 +31,7 @@
       <div class="row d-flex justify-content-center">
         <div class="col-lg-8">
           <h2 class="fw-bold mb-5">Sign up now</h2>
-          <form action="/signup" method="post">
+          <form action="/signup" method="post" id="signupForm">
             <%if(emailerr) {%>
               <% if(emailerr.length){%> 
               <div class="alert alert-danger d-flex align-items-center" role="alert">
@@ -45,14 +46,19 @@
               <div class="col-md-6 mb-4">
                 <div class="form-outline text-left">
                   <label class="form-label" for="form3Example1">First name</label>
-                  <input type="text" id="form3Example1" class="form-control" name="fName" />
-                  
+                  <input type="text" id="fName" class="form-control" name="fName" required />
+                  <p id="usercheck" style="color: red;">
+                    **Username is missing
+                </p>
                 </div>
               </div>
               <div class="col-md-6 mb-4">
                 <div class="form-outline text-left">
                   <label class="form-label" for="form3Example2">Last name</label>
-                  <input type="text" id="form3Example2" class="form-control" name="lName"/>
+                  <input type="text" id="lName" class="form-control" name="lName" required/>
+                  <p id="lastnamecheck" style="color: red;">
+                    **lastname is missing
+                </p>
                 </div>
               </div>
             </div>
@@ -61,15 +67,19 @@
             <div class="row">
               <div class="col-md-6 mb-4">
               <div class="form-outline mb-4 text-left">
-                <label class="form-label" for="form3Example3">Email address</label>
-                <input type="email" id="form3Example3" class="form-control" name="email" />
+                <label id="email" class="form-label" for="form3Example3">Email address</label>
+                <input type="email" id="email"  class="form-control" name="email" required />
+                <small id="emailvalid" class="form-text
+                            text-muted invalid-feedback">
+                            our email must be a valid email
+                 </small>
               </div>
               </div>
 
               <div class="col-md-6 mb-4">
               <div class="form-outline mb-4 text-left">
                 <label class="form-label" for="form3Example3">Phone No</label>
-                <input type="tel" id="form3Example3" class="form-control" name="phoneno" />
+                <input type="tel" id="phoneno" class="form-control" name="phoneno" required />
                 
               </div>
             </div>
@@ -81,7 +91,10 @@
               <div class="col-md-6 mb-4">
             <div class="form-outline mb-4 text-left">
               <label class="form-label" for="form3Example4">Password</label>
-              <input type="password" id="form3Example4" class="form-control" name="pass" />
+              <input type="password" id="pass" class="form-control" name="pass" required/>
+              <p id="passcheck" style="color: red;">
+                **Please Fill the password
+            </p>
             </div>
           </div>
 
@@ -90,7 +103,10 @@
             <div class="form-outline mb-4 text-left">
           
               <label class="form-label " for="form3Example4">confirm Password</label>
-              <input type="confirm password" id="form3Example4" class="form-control" name="cpass" />
+              <input type="confirm password" id="cpass" class="form-control" name="cpass" required />
+              <p id="conpasscheck" style="color: red;">
+                **Password didn't match
+            </p>
             </div>
           </div>
       </div>
@@ -107,14 +123,167 @@
     </div>
   </div>
 </section>
+<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+<script>
+  $(document).ready(function () {
+// Validate Username
+$("#usercheck").hide();
+let usernameError = true;
+$("#fName").keyup(function () {
+  validateUsername();
+});
+
+function validateUsername() {
+  let usernameValue = $("#fName").val();
+  if (usernameValue.length == "") {
+    $("#usercheck").show();
+    usernameError = false;
+    return false;
+  } else if (usernameValue.length < 3 || usernameValue.length > 10) {
+    $("#usercheck").show();
+    $("#usercheck").html("**length of username must be between 3 and 10");
+    usernameError = false;
+    return false;
+  } else {
+    $("#usercheck").hide();
+  }
+}
+
+// Validate Last name
+$("#lastnamecheck").hide();
+let lastnameError = true;
+$("#lName").keyup(function () {
+  validatelastname();
+});
+
+function validatelastname() {
+  let usernameValue = $("#lName").val();
+  if (usernameValue.length == "") {
+    $("#lastnamecheck").show();
+    usernameError = false;
+    return false;
+  } else if (usernameValue.length < 3 || usernameValue.length > 10) {
+    $("#lastnamecheck").show();
+    $("#lastnamecheck").html("**length of username must be between 3 and 10");
+    usernameError = false;
+    return false;
+  } else {
+    $("#lastnamecheck").hide();
+  }
+}
+
+//   Validate Email
+const email = document.getElementById("email");
+email.addEventListener("blur", () => {
+  let regex = /^([_\-\.0-9a-zA-Z]+)@([_\-\.0-9a-zA-Z]+)\.([a-zA-Z]){2,7}$/;
+  let s = email.value;
+  if (regex.test(s)) {
+    email.classList.remove("is-invalid");
+    emailError = true;
+  } else {
+    email.classList.add("is-invalid");
+    emailError = false;
+  }
+});
+
+// Validate Password
+$("#passcheck").hide();
+let passwordError = true;
+$("#pass").keyup(function () {
+  validatePassword();
+});
+async function validatePassword () {
+  let passwordValue = $("#pass").val();
+  if (passwordValue.length == "") {
+    $("#passcheck").show();
+    passwordError = false;
+    return false;
+  }
+  if (passwordValue.length < 3 || passwordValue.length > 10) {
+    $("#passcheck").show();
+    $("#passcheck").html(
+      "**length of your password must be between 3 and 10"
+    );
+    $("#passcheck").css("color", "red");
+    passwordError = false;
+    return false;
+  } 
+  let res= await containsSpecialChars(passwordValue)
+ console.log(res);
+if(res===false){
+  $("#passcheck").show();
+    $("#passcheck").html(
+      "Password must contain special characters"
+    );
+    $("#passcheck").css("color", "red");
+    passwordError = false;
+    return false;
+}
+else {
+    $("#passcheck").hide();
+  }
+}
+function containsSpecialChars(str) {
+  console.log('ivde vannu');
+const specialChars = /[`!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?~]/;
+return specialChars.test(str);
+}
+// Validate Confirm Password
+$("#conpasscheck").hide();
+let confirmPasswordError = true;
+$("#cpass").keyup(function () {
+  validateConfirmPassword();
+});
+function validateConfirmPassword() {
+  let confirmPasswordValue = $("#cpass").val();
+  let passwordValue = $("#pass").val();
+  if (passwordValue != confirmPasswordValue) {
+    $("#conpasscheck").show();
+    $("#conpasscheck").html("**Password didn't Match");
+    $("#conpasscheck").css("color", "red");
+    confirmPasswordError = false;
+    return false;
+  } else {
+    $("#conpasscheck").hide();
+  }
+}
+
+// Submit button
+$("#submitbtn").click(function () {
+  validateUsername();
+  validatelastname();
+  validatePassword();
+  validateConfirmPassword();
+  validateEmail();
+  if (
+    usernameError == true &&
+    lastnameError == true &&
+    passwordError == true &&
+    confirmPasswordError == true &&
+    emailError == true
+  ) {
+      $('#signupForm').submit(function (evt) {
+  evt.preventDefault();
+  window.history.back();
+});
+    return true;
+  } else {  
+    return false;
+  }
+});
+});
+ 
+</script>
 <!-- Section: Design Block -->
 
+<!-- <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 <script src =  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>    
 <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>    
-
+<!-- <script src="/user/js/signupValidation.js"></script> -->
 </body>
 </html>
 
